# minimal-pong

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements.dev.txt
.github/workflows/: build_exe.yaml  ci.yaml
minimal_pong/: __main__.py  entity.py  game.py  state.py
minimal_pong/audios/: __init__.py
minimal_pong/entities/: ball.py  paddle.py
minimal_pong/states/: menu.py  play.py
